Fix: bugs, header alignment, background css, loader component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -50,3 +50,7 @@ h1 {
     font-size: 2.5vw;
   }
 }
+
+.color-nav {
+  background-color: #000000;
+}
